examples/bad/static_error_tuple_immutable.ps
tuple<int, string, bool> tup = (1, "hello", true);
tup[1] = true;

println(tup);